--- a/meet/20190918_mom.md
+++ b/meet/20190918_mom.md
@@ -14,8 +14,9 @@
   - manifest distributed through Key/Value storage
 - GOAL
   - object storage in an NDN environment
+  - DIFS = file storage + Key/Value storage
 
-#### DIFS file storage
+##### DIFS file storage
 
 - Environment
   - basically, repo-ng environment
@@ -24,7 +25,7 @@
   - stored of a segment in the form of a blob
 - How  configure the optimal directory
 
-#### DIFS Key/Value storage
+##### DIFS Key/Value storage
 
 - DIFS clustering
   - each DIFS has its own hash range configuration
