--- a/meet/20190918_mom.md
+++ b/meet/20190918_mom.md
@@ -4,7 +4,7 @@
 
 ### summary
 
-#### DIFS (Data Infra File System)
+#### 1. DIFS (Data Infra File System)
 
 - Introduce DIFS
   - using repo-ng command (just command)
@@ -16,7 +16,7 @@
   - object storage in an NDN environment
   - DIFS = file storage + Key/Value storage
 
-##### DIFS file storage
+##### 1-1. DIFS file storage
 
 - Environment
   - basically, repo-ng environment
@@ -25,7 +25,7 @@
   - stored of a segment in the form of a blob
 - How  configure the optimal directory
 
-##### DIFS Key/Value storage
+##### 1-2. DIFS Key/Value storage
 
 - DIFS clustering
   - each DIFS has its own hash range configuration
@@ -35,7 +35,7 @@
   - Key: content_name hashing result
   - Value: manifest file
 
-#### Performance Test Comparison (repo-ng VS DIFS)
+#### 2. Performance Test Comparison (repo-ng VS DIFS)
 
 - compare DIFS/repo-ng performance
   - test case is required for an itemized performance indicator
