--- a/meet/20191101_mom.md
+++ b/meet/20191101_mom.md
@@ -8,47 +8,43 @@
 
 #### 1. DIFS (Data Infra File System)
 
-- Introduce DIFS
-  - using repo-ng command (just command)
-  - segments stored file storage
-  - rename segments: file storage (ex: /{file_storage_routable_name}/{contentname})
-  - rename segments information is provided as a manifest file through Key/Value storage
-  - manifest distributed through Key/Value storage
-- GOAL
-  - object storage in an NDN environment
-  - DIFS = file storage + Key/Value storage
+- 현재 진행사항 및 이슈
+- paper review
 
-##### 1-1. DIFS file storage
+##### 1-1. 현재 진행 상황
 
-- Environment
-  - basically, repo-ng environment
-  - replace the sqlite3 with a file storage
-- unstructured data storage
-  - stored of a segment in the form of a blob
-- How  configure the optimal directory
+- 파일 시스템
+  - repo-ng 기반 파일 시스템 구성
+  - repo-ng 의 테이블 구조를 디렉토리화
+    - 파일 사이즈가 큰 경우 n 개의 디렉토리 구성
+    - manifest file 은 1개
+- manifest file
+  - StartBlockID 및 EndBlockID 추가 
 
-##### 1-2. DIFS Key/Value storage
+##### 1-2. 이슈 사항
 
-- DIFS clustering
-  - each DIFS has its own hash range configuration
-- Key/Value storage select
-  - hash range comparison that is responsible for the hash of the content name
-- Key-Value store
-  - Key: content_name hashing result
-  - Value: manifest file
+- 성능 비교를 위한 테스트 케이스
+  - 1 KB 사이즈 구성으로 repo-ng 와 비교하는 경우
+    - DIFS 의 성능 문제 발생
+    - 원인 분석이 필요함
 
-#### 2. Performance Test Comparison (repo-ng VS DIFS)
+##### 1-3. 성능 비교 논문
 
-- compare DIFS/repo-ng performance
-  - test case is required for an itemized performance indicator
+- Analysis_of_NDN_Repository_Architecture_and_its_Improvement_for_IO_extensive_Applications
+  - NDNFS 와 repo-ng 성능 비교
+  - 테스트 케이스 및 성능 비교 결과 공유
+  - NDNFS-port git 참조
+    - repo-ng 의 패킷 크기: 4KB
+    - NDNFS 의 패킷 크기: 8,198 B
 
 ---
 
 ### NEXT ITEM
 
-- schedule
-- detailed mechanism
-  - directory configuration is important
-  - make the necessary interest commands
-  - file storage and Key/Value storage characteristics and advantages are important
-- various test cases are required for performance comparison
+- 성능 분석 관련
+  - 현재 구성에서 패킷 사이즈 조절하여 비교
+    - repo-ng: 4KB / NDNFS: 8KB
+  - 파일 시스템 구조 분석
+    - 성능 이슈 원인 분석
+- 스케줄
+  - 11월 20일 완료보고 예정
