--- a/meet/20191111_mom.md
+++ b/meet/20191111_mom.md
@@ -1,12 +1,31 @@
 ## Minutes Of Meeting
 
-- date: 2019.11.01.
+- date: 2019.11.11.
 
 ---
 
 ### summary
 
-#### 1. DIFS (Data Infra File System)
+- 테스트 케이스
+- 성능
 
-- 현재 진행사항 및 이슈
-- paper review
+### 1. DIFS (Data Infra File System)
+
+#### 현재 진행 사항
+
+- DIFS 개발 정리
+  - 2019년도 개발관련하여 가능성 위주의 개발
+  - 추후 확대 
+
+#### 이슈
+
+- repo-ng 와 성능 비교 테스트
+  - DIFS 의 월등한 성능 차이를 보이는 항목 필요
+- repo-ng 와 동일 조건시 발생 문제점
+  - repo-ng 와 DIFS 차이가 없음
+    - segment 크기 고정시 차이 없음
+  - Signature 처리 방안
+    - DIFS 의 경우 file name 이 rename 되기 때문에 signature 오버헤드 발생
+    - 현재 매 패킷마다 signature 작성
+
+### 2. 일정
