--- a/meet/20191111_mom.md
+++ b/meet/20191111_mom.md
@@ -27,5 +27,23 @@
   - Signature 처리 방안
     - DIFS 의 경우 file name 이 rename 되기 때문에 signature 오버헤드 발생
     - 현재 매 패킷마다 signature 작성
+- 테스트
+  - segment 크기
+    - 전체 패킷 크기는 8K 이며
+    - repo-ng 는 기본 크기, DIFS 는 4K
+  - insert
+    - 200M, 700M, 1G 를 대상으로 함
+    - insert time 및 CPU/MEM 관련 repo-ng 와 DIFS 비교
+    - 다중 접속시 동일 비교
+    - 결과 화면 및 그래프 구성 (그래프는 데이터 포함)
+  - get
+    - 200M, 700M, 1G 를 대상으로 함
+    - get time 및 CPU/MEM 관련 repo-ng 와 DIFS 비교
+    - 다중 접속시 동일 비교
+    - 결과 화면 및 그래프 구성 (그래프는 데이터 포함)
 
 ### 2. 일정
+
+- 용역 종료 절차
+  - 11월 20일 검수예정
+  - 결과보고서; 메뉴얼; 소스코드
