--- a/meet/20191111_mom.md
+++ b/meet/20191111_mom.md
@@ -28,9 +28,14 @@
     - DIFS 의 경우 file name 이 rename 되기 때문에 signature 오버헤드 발생
     - 현재 매 패킷마다 signature 작성
 - 테스트
+  - Signature
+    - DIFS 의 경우 signature 를 SHA256 으로 하여 테스트 진행
+    - 관련링크: http://named-data.net/doc/NDN-packet-spec/current/signature.html#interest-signature
+    - repo-ng 의 경우 content name 변화가 없으며 DIFS 는 rename 으로 인한 signature 발생
+    - DIFS SignatureType 을 0 으로 설정하고 테스트 진행
   - segment 크기
-    - 전체 패킷 크기는 8K 이며
-    - repo-ng 는 기본 크기, DIFS 는 4K
+    - 기본적으로 같은 segmant 크기를 가정함
+    - 옵션으로 repo-ng 는 기본 크기, DIFS 는 전체 4K
   - insert
     - 200M, 700M, 1G 를 대상으로 함
     - insert time 및 CPU/MEM 관련 repo-ng 와 DIFS 비교
