--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -66,9 +66,9 @@
     - 성능 테스트 결과 `blake2` 가 'sha256' 에 비해 우수함 확인
   - Signature 성능을 높이기 위한 방안으로 'Hash Chain' 과 함께 적용
   - 적용 방안
-    - [NDN Packet Format Signature Type]([https://named-data.net/doc/NDN-packet-spec/current/signature.html](https://named-data.net/doc/NDN-packet-spec/current/signature.html)) 추가
+    - [NDN Packet Format Signature Type](https://named-data.net/doc/NDN-packet-spec/current/signature.html) 추가
     - 'SignatureBlakeWithRsa' 또는 'DigestBlake' 등
-    - 현재 제공되는 NDN Signature Type
+    - 현재 제공되는 NDN Signature Type 은 아래와 
 
 | Value | Reference | Description |
 |:---:|:---|:---|
