--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -68,7 +68,7 @@
   - 적용 방안
     - [NDN Packet Format Signature Type](https://named-data.net/doc/NDN-packet-spec/current/signature.html) 추가
     - 'SignatureBlakeWithRsa' 또는 'DigestBlake' 등
-    - 현재 제공되는 NDN Signature Type 은 아래와 
+    - 현재 제공되는 NDN Signature Type 은 아래와 같음
 
 | Value | Reference | Description |
 |:---:|:---|:---|
