--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -79,3 +79,31 @@
 | 2,5-200 | | reserved for future assignments |
 | >200 | `Blake Type 추가` | unassigned |
 
+#### Layered Hash Table
+
+- 박세형 선임 자료 정리 예정
+
+### 일정
+
+- 크게 상반기 (7월) 및 하반기 (11월) 구성
+  - 상반기: '기본기능' 및 'Signature' 파트
+  - 하반기: 'Layered Hash Table' 파트
+- 논문 및 OpenSource 일정과 함께 조율 필요
+  - 상반기의 일정은 보다 빠르게 진행되어야 할 필요가 있음
+  - 'acm-icn 2020' 일정이 다음과 같음
+    - May 15, 2020: Paper Registration Deadline
+    - May 22, 2020: Paper Submission Deadline
+    - Aug 1, 2020: Acceptance Notification
+    - Sep 1, 2020: Camera Ready
+    - Sep 28: Conference
+- 'COVID19' 로 인한 일정 조율 가능성 있음
+
+#### 우선순위
+
+1. '기본기능'
+2. 'Signature (blake2/3, hash-chain)'
+3. 'Layered Hash Tree'
+
+#### 상세 개발 일정
+
+- 상세 개발 관련 일정 조율 예정
