--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -79,11 +79,13 @@
 | 2,5-200 | | reserved for future assignments |
 | >200 | `Blake Type 추가` | unassigned |
 
-#### Layered Hash Table
+### Layered Hash Table
 
 - 박세형 선임 자료 정리 예정
+- 배경
+- 동작 절차
 
-### 일정
+## 일정
 
 - 크게 상반기 (7월) 및 하반기 (11월) 구성
   - 상반기: '기본기능' 및 'Signature' 파트
