--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -92,7 +92,7 @@
   - 하반기: 'Layered Hash Table' 파트
 - 논문 및 OpenSource 일정과 함께 조율 필요
   - 상반기의 일정은 보다 빠르게 진행되어야 할 필요가 있음
-  - 'acm-icn 2020' 일정이 다음과 같음
+  - [acm-icn 2020](http://conferences.sigcomm.org/acm-icn/2020/) 일정이 다음과 같음
     - May 15, 2020: Paper Registration Deadline
     - May 22, 2020: Paper Submission Deadline
     - Aug 1, 2020: Acceptance Notification
