--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -10,8 +10,8 @@
 
 - 'named data networking' 커뮤니티에 OpenSource 추진
   - 기본 기능 정리
-  - 부족한 기능 보완
-  - flow 체크
+    - 부족한 기능 보완
+    - flow 체크
   - 인터페이스 추가 지원
 - DIFS 성능 및 기능에 대한 '논문' 추진
   - sqlite3 vs filesystem 강점
@@ -20,7 +20,7 @@
 
 ### 기본 기능
 
-- 현재 get/put 이외의 기능 추가
+- get/put 이외 필수 기능 추가
 - repo-ng 의 [redmine issue](https://redmine.named-data.net/projects/repo-ng/issues/report) 기반 기본 기능 체크
   - issue 내용을 파악하고 필요한 기능은 DIFS 에 적용 (대표적으로 delete 기능 등)
   - 추가적으로 repo-ng 에서 정상 동작을 하는 것인지 확인 필요
@@ -28,6 +28,14 @@
     - 저장한 data 의 prefix 를 local NFD 에 advertise 하는 내용
     - 모든 prefix 를 advertise 하는 방식인지 code 에서 체크 (network name + data name)
     - 저장한 data name 이 어디까지가 prefix 로 지정되는지, 해당 prefix 는 local NFD 에 advertise 되는지 체크
+- repo-ng redmine issue 내용 중 반드시 구현할 내용 정리
+  - issue 리스트 내용 확인 후 DIFS 에 반드시 필요한 기능 항목 도출
+  - 회의를 통하여 DIFS 필수 기능 리스트 업
+- 기본 기능 체크
+  - repo-ng redmine issue 중 'closed' 의 경우 repo-ng 의 flow 확인
+    - repo-ng 의 flow 확인이 완료되면 DIFS flow 확인
+  - repo-ng redmine issue 중 'new/in progress' 의 경우 DIFS 로 구현
+    - 구현 후 DIFS flow 확인
 
 ### Signature
 
@@ -35,14 +43,14 @@
   - NDN 은 기본적으로 모든 데이터에 대한 signature 를 요구하고 있으며 이는 매우 비싼 자원을 소모하는 것에 공감하고 있음
   - Signature 를 줄이는 방안이 몇가지 소개되고 있으나 embedded manifest 방식을 제외하면 별 다른 움직임이 없음
   - DIFS 도 데이터가 저장되는 저장소이기에 signature 에 대한 이슈를 동일하게 가지고 있음
-    - 2019 년에 sha256 을 사용하는 방법으로 진행이 되었음
-  - `blake2b` 또는 `blake3` 활용
-    - sha256 보다 성능 우수
+    - 2019 년에 'DigestSha256' 을 사용하는 방법으로 진행이 되었음
+  - 새로운 signature type 정의 `blake2b` 또는 `blake3` 활용
+  - `blake` 기반의 `hash chain` 구조
 
 #### Hash Chain (Integrity Verifying, Originality)
 
 - Hash Chain
-  - DIFS 에서 제공하는 Signature 방안으로 'One Signature' 를 통한 데이터 원천성/검증 지원 방안
+  - DIFS 에서 제공하는 Signature 방안으로 'One Signature' 를 통한 데이터 무결성 지원 방안
   - 동작 절차
     - 최초 데이터 패킷은 signature 를 포함하며 digest 로 바로 뒤 데이터의 hash 를 가지고 있음
     - 두번째 데이터 패킷은 digest 로 바로 뒤 데이터의 hash 를 가지고 있음
@@ -61,10 +69,11 @@
 #### Signature Type (blake2b/blake3)
 
 - blake
+  - Signature 성능을 높이기 위한 방안으로 'Hash Chain' 과 함께 적용
+    - 'sha256' 보다 성능을 대폭 개선한 `blake` 활용
   - 'sha256' 자체의 성능 문제 해소를 위함
     - `blake2b` 또는 `blake3` 활용
     - 성능 테스트 결과 `blake2` 가 'sha256' 에 비해 우수함 확인
-  - Signature 성능을 높이기 위한 방안으로 'Hash Chain' 과 함께 적용
   - 적용 방안
     - [NDN Packet Format Signature Type](https://named-data.net/doc/NDN-packet-spec/current/signature.html) 추가
     - 'SignatureBlakeWithRsa' 또는 'DigestBlake' 등
