--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -74,6 +74,8 @@
   - 'sha256' 자체의 성능 문제 해소를 위함
     - `blake2b` 또는 `blake3` 활용
     - 성능 테스트 결과 `blake2` 가 'sha256' 에 비해 우수함 확인
+    - [hash-compare-test](https://github.com/uni2u/difs/blob/master/reference/hash-compare-test%20(7).pdf)
+    - [hash-compare-test-rsa](https://github.com/uni2u/difs/blob/master/reference/hash-compare-test-rsa%20(1).pdf)
   - 적용 방안
     - [NDN Packet Format Signature Type](https://named-data.net/doc/NDN-packet-spec/current/signature.html) 추가
     - 'SignatureBlakeWithRsa' 또는 'DigestBlake' 등
@@ -93,6 +95,13 @@
 - 박세형 선임 자료 정리 예정
 - 배경
 - 동작 절차
+- 참고 reference
+  - [Data authentication for NDN using Hash Chains](https://github.com/uni2u/difs/blob/master/reference/Data%20authentication%20for%20NDN%20using%20Hash%20Chains_.pdf)
+  - [Group-Interest-Based Verifiable CCN](https://github.com/uni2u/difs/blob/master/reference/Group-Interest-Based%20Verifiable%20CCN.pdf)
+  - [Improvement_of_the_Data_Authentication_of_CCN](https://github.com/uni2u/difs/blob/master/reference/Improvement_of_the_Data_Authentication_of_CCN.pdf)
+  - [Network_Overhead_Improvement_for_MHT-based_Content_Authentication](https://github.com/uni2u/difs/blob/master/reference/Network_Overhead_Improvement_for_MHT-based_Content_Authentication_Scheme.pdf)
+  - [The_Error_Occurrence_and_Its_Impact_Analysis_of_Improved_MHT_Operation_for_CCN_Content_Authentication](https://github.com/uni2u/difs/blob/master/reference/The_Error_Occurrence_and_Its_Impact_Analysis_of_Improved_MHT_Operation_for_CCN_Content_Authentication.pdf)
+  - [The_Shortest_Authentication_Path_for_Performance_Improvement_of_MHT_Contents_Authentication_Method_in_Distributed_Network_Environment](https://github.com/uni2u/difs/blob/master/reference/The_Shortest_Authentication_Path_for_Performance_Improvement_of_MHT_Contents_Authentication_Method_in_Distributed_Network_Environment.pdf)
 
 ## 일정
 
