--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -38,6 +38,20 @@
     - repo-ng 의 flow 확인이 완료되면 DIFS flow 확인
   - repo-ng redmine issue 중 'new/in progress' 의 경우 DIFS 로 구현
     - 구현 후 DIFS flow 확인
+- Custom Define Role
+  - 데이터 복제에 대한 기능
+    - 데이터가 저장된 지역 이외의 지역에서 데이터 사용 트래픽이 폭증하는 경우
+    - 소스 데이터를 트래픽 폭증 지역의 DIFS 노드로 복제
+    - 데이터 provider 가 정해놓은 설정에 따라 복제 실행 (임계치, 복제 방법 등)
+- Data Type
+  - 데이터 타입별 저장
+    - 데이터 사이즈 측면에서 작은 데이터 (예: 텍스트) 와 큰 데이터 (예: 동영상) 구분
+    - 데이터 종류 측면에서 텍스트/멀티미디어 구분
+    - 현재 필요성에 대한 논의 중
+  - 데이터 타입별 제공
+    - 위와 같은 내용으로 데이터 타입에 따른 제공 방안이 구분되어야 할 수 있음
+    - 네트워크 속도가 매우 중요한 데이터 또는 품질이 매우 중요한 데이터 등
+    - 현재 필요성에 대한 논의
 
 ### Signature
 
@@ -94,9 +108,20 @@
 
 ### Layered Hash Table
 
-- 박세형 선임 자료 정리 예정
 - 배경
-- 동작 절차
+  - DIFS 에 저장된 데이터의 버전 관리가 필요
+  - 이때 데이터는 '원데이터 + 수정데이터' 를 의미함
+    - 예를 들어 우분투18.04 와 우분투19.04 를 들 수 있음
+    - '우분투18.04' 를 기반으로 기능을 추가하고 수정한 버전이 '우분투19.04' 이며
+    - 사용자가 우분투18.04 를 가지고 있으면 우분투19.04 의 변화된 부분만 다운로드하여 활용 (docker image 참조)
+  - 즉, 데이터 전체에 대한 calculation overhead 를 줄이고자 함
+  - hash-chain 을 사용하는 경우
+    - 새로운 데이터가 뒤에 add 되어 버전 업데이트가 일어난다면
+    - chain 구성을 위해 새로운 hash chain 을 만들어야 함
+  - TLDA (Two Layered Data Authentication) 메커니즘 활용
+  - Hash Tree 를 활용하여 버저닝에 대한 문제를 해소하고자 함
+    - 사용자는 one signature 기반의 hash tree 를 활용하여
+    - 이미 가지고 있는 버전이 있다면 변화된 부분만 다운로드 할 수 있음
 - 참고 reference
   - [Data authentication for NDN using Hash Chains](https://github.com/uni2u/difs/blob/master/reference/Data%20authentication%20for%20NDN%20using%20Hash%20Chains_.pdf)
   - [Group-Interest-Based Verifiable CCN](https://github.com/uni2u/difs/blob/master/reference/Group-Interest-Based%20Verifiable%20CCN.pdf)
