--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -109,7 +109,7 @@
 ### Layered Hash Table
 
 - 배경
-  - DIFS 에 저장된 데이터의 버전 관리가 필요
+  - DIFS 에 저장된 데이터의 **버전 관리**가 필요
   - 이때 데이터는 '원데이터 + 수정데이터' 를 의미함
     - 예를 들어 우분투18.04 와 우분투19.04 를 들 수 있음
     - '우분투18.04' 를 기반으로 기능을 추가하고 수정한 버전이 '우분투19.04' 이며
@@ -120,8 +120,8 @@
     - chain 구성을 위해 새로운 hash chain 을 만들어야 함
   - TLDA (Two Layered Data Authentication) 메커니즘 활용
   - Hash Tree 를 활용하여 버저닝에 대한 문제를 해소하고자 함
-    - 사용자는 one signature 기반의 hash tree 를 활용하여
-    - 이미 가지고 있는 버전이 있다면 변화된 부분만 다운로드 할 수 있음
+    - 사용자는 **one signature** 기반의 **hash tree** 를 활용하여
+    - 이미 가지고 있는 버전이 있다면 **변화된 부분만 다운로드**
 - 참고 reference
   - [Data authentication for NDN using Hash Chains](https://github.com/uni2u/difs/blob/master/reference/Data%20authentication%20for%20NDN%20using%20Hash%20Chains_.pdf)
   - [Group-Interest-Based Verifiable CCN](https://github.com/uni2u/difs/blob/master/reference/Group-Interest-Based%20Verifiable%20CCN.pdf)
