--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -119,7 +119,7 @@
     - 새로운 데이터가 뒤에 add 되어 버전 업데이트가 일어난다면
     - chain 구성을 위해 새로운 hash chain 을 만들어야 함
   - TLDA (Two Layered Data Authentication) 메커니즘 활용
-  - Hash Tree 를 활용하여 버저닝에 대한 문제를 해소하고자 함
+  - **Hash Tree** 를 활용하여 버저닝에 대한 문제를 해소하고자 함
     - 사용자는 **one signature** 기반의 **hash tree** 를 활용하여
     - 이미 가지고 있는 버전이 있다면 **변화된 부분만 다운로드**
 - 참고 reference
