--- a/meet/20200409_mom.md
+++ b/meet/20200409_mom.md
@@ -19,6 +19,7 @@
   - sqlite3 vs filesystem 강점
   - signature (hash-chain)
   - Layered Hash Tree 를 통한 데이터 관리
+  - DIFS 동적 구성
 
 ### 기본 기능
 
@@ -130,11 +131,16 @@
   - [The_Error_Occurrence_and_Its_Impact_Analysis_of_Improved_MHT_Operation_for_CCN_Content_Authentication](https://github.com/uni2u/difs/blob/master/reference/The_Error_Occurrence_and_Its_Impact_Analysis_of_Improved_MHT_Operation_for_CCN_Content_Authentication.pdf)
   - [The_Shortest_Authentication_Path_for_Performance_Improvement_of_MHT_Contents_Authentication_Method_in_Distributed_Network_Environment](https://github.com/uni2u/difs/blob/master/reference/The_Shortest_Authentication_Path_for_Performance_Improvement_of_MHT_Contents_Authentication_Method_in_Distributed_Network_Environment.pdf)
 
+### DIFS 동적 구성
+
+- DIFS 구성 노드의 동적 구성
+  - **DHT** 활용
+
 ## 일정
 
 - 크게 상반기 (7월) 및 하반기 (11월) 구성
-  - 상반기: '기본기능' 및 'Signature' 파트
-  - 하반기: 'Layered Hash Table' 파트
+  - 상반기: '기본기능' 및 'blake 기반 one signature hash-chain' 파트
+  - 하반기: 'Layered Hash Table' 및 'DIFS 동적 구성' 파트
 - 논문 및 OpenSource 일정과 함께 조율 필요
   - 상반기의 일정은 보다 빠르게 진행되어야 할 필요가 있음
   - [acm-icn 2020](http://conferences.sigcomm.org/acm-icn/2020/) 일정이 다음과 같음
@@ -150,7 +156,13 @@
 1. '기본기능'
 2. 'Signature (blake2/3, hash-chain)'
 3. 'Layered Hash Tree'
+4. 'DIFS 동적 구성'
 
 #### 상세 개발 일정
 
 - 상세 개발 관련 일정 조율 예정
+
+#### 요청 사항
+
+- DIFS 2019 code walk-through
+  - repo-ng 포함
