--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -74,14 +74,16 @@ index d7c0e709..e836ab44 100644
     - ...
 
 ```
-+-[Signature]--------+  +-->[hash]--------------+  +-->[hash]--------------+  +-->[hash]--------------+
-| +----------------+ |  |  | +----------------+ |  |  | +----------------+ |  |  | +----------------+ |
-| |next packet hash| ---+  | |next packet hash| ---+  | |next packet hash| ---+  | |next packet hash| ---+
-| +----------------+ |     | +----------------+ |     | +----------------+ |     | +----------------+ |  |
-| |    data #01    | |     | |    data #02    | |     | |    data #03    | | ... | |    data #END   | |  |
-| +----------------+ |     | +----------------+ |     | +----------------+ |     | +----------------+ |  |
-|                    |     +--------------------+     +--------------------+     +--------------------+  |
-+------------[ hash ]<-----------------------------------------------------------------------------------+
++-->>[Signature]-----------+   +-->[hash]----------------+   +-->[hash]----------------+     +--------------------+
+|  |                       |   |  |                      |   |  |                      |     |                    |
+|  | +-------------------+ |   |  | +------------------+ |   |  | +------------------+ |     | +----------------+ |
+|  | |hash(#01||#end_key)| |---+  | |hash(#02||#01_key)| |---+  | |hash(#03||#02_key)| |     | |   null hash    | ---+
+|  | +-------------------+ |      | +------------------+ |      | +------------------+ |     | +----------------+ |  |
+|  | |    data #01       | |      | |    data #02      | |      | |    data #03      | | ... | |    data #END   | |  |
+|  | +-------------------+ |      | +------------------+ |      | +------------------+ |     | +----------------+ |  |
+|  +-----------------------+      +----------------------+      +----------------------+     +--------------------+  |
+|                                                                                                                    |
++------------------------------------------------------------------------------------------------(#end_key)----------+
 ```
 
 #### Signature Type (blake2b/blake3)
@@ -90,7 +92,7 @@ index d7c0e709..e836ab44 100644
   - Signature 성능을 높이기 위한 방안으로 'Hash Chain' 과 함께 적용
     - 'sha256' 보다 성능을 대폭 개선한 `blake` 활용
   - 'sha256' 자체의 성능 문제 해소를 위함
-    - `blake2b` 또는 `blake3` 활용
+    - `blake3` 활용
     - 성능 테스트 결과 `blake2` 가 'sha256' 에 비해 우수함 확인
       - [hash-compare-test](https://github.com/uni2u/difs/blob/master/reference/hash-compare-test%20(7).pdf)
       - [hash-compare-test-rsa](https://github.com/uni2u/difs/blob/master/reference/hash-compare-test-rsa%20(1).pdf)
@@ -105,65 +107,10 @@ index d7c0e709..e836ab44 100644
 | 1 | [SignatureSha256WithRsa](https://named-data.net/doc/NDN-packet-spec/current/signature.html#signaturesha256withrsa) | Integrity and provenance protection using RSA signature over a SHA-256 digest |
 | 3 | [SignatureSha256WithEcdsa](https://named-data.net/doc/NDN-packet-spec/current/signature.html#signaturesha256withecdsa) | Integrity and provenance protection using an ECDSA signature over a SHA-256 digest |
 | 4 | [SignatureHmacWithSha256](https://named-data.net/doc/NDN-packet-spec/current/signature.html#signaturehmacwithsha256) | Integrity and provenance protection using SHA256 hash-based message authentication codes |
+| 5 | `SignatureSha256WithHashChain` | Integrity and provenance protection using Hash Chain signature over a SHA-256 digest |
+| 6 | `DigestBlake3` | Integrity protection using Blake3 digest |
+| 7 | `SignatureBlake3WithHashChain` | Integrity and provenance protection using Hash Chain signature over a Blake3 digest |
 | 2,5-200 | | reserved for future assignments |
 | >200 | `Blake Type 추가` | unassigned |
 
-### Layered Hash Table
-
-- 배경
-  - DIFS 에 저장된 데이터의 **버전 관리**가 필요
-  - 이때 데이터는 '원데이터 + 수정데이터' 를 의미함
-    - 예를 들어 우분투18.04 와 우분투19.04 를 들 수 있음
-    - '우분투18.04' 를 기반으로 기능을 추가하고 수정한 버전이 '우분투19.04' 이며
-    - 사용자가 우분투18.04 를 가지고 있으면 우분투19.04 의 변화된 부분만 다운로드하여 활용 (docker image 참조)
-  - 즉, 데이터 전체에 대한 calculation overhead 를 줄이고자 함
-  - hash-chain 을 사용하는 경우
-    - 새로운 데이터가 뒤에 add 되어 버전 업데이트가 일어난다면
-    - chain 구성을 위해 새로운 hash chain 을 만들어야 함
-  - TLDA (Two Layered Data Authentication) 메커니즘 활용
-  - **Hash Tree** 를 활용하여 버저닝에 대한 문제를 해소하고자 함
-    - 사용자는 **one signature** 기반의 **hash tree** 를 활용하여
-    - 이미 가지고 있는 버전이 있다면 **변화된 부분만 다운로드**
-- 참고 reference
-  - [Data authentication for NDN using Hash Chains](https://github.com/uni2u/difs/blob/master/reference/Data%20authentication%20for%20NDN%20using%20Hash%20Chains_.pdf)
-  - [Group-Interest-Based Verifiable CCN](https://github.com/uni2u/difs/blob/master/reference/Group-Interest-Based%20Verifiable%20CCN.pdf)
-  - [Improvement_of_the_Data_Authentication_of_CCN](https://github.com/uni2u/difs/blob/master/reference/Improvement_of_the_Data_Authentication_of_CCN.pdf)
-  - [Network_Overhead_Improvement_for_MHT-based_Content_Authentication](https://github.com/uni2u/difs/blob/master/reference/Network_Overhead_Improvement_for_MHT-based_Content_Authentication_Scheme.pdf)
-  - [The_Error_Occurrence_and_Its_Impact_Analysis_of_Improved_MHT_Operation_for_CCN_Content_Authentication](https://github.com/uni2u/difs/blob/master/reference/The_Error_Occurrence_and_Its_Impact_Analysis_of_Improved_MHT_Operation_for_CCN_Content_Authentication.pdf)
-  - [The_Shortest_Authentication_Path_for_Performance_Improvement_of_MHT_Contents_Authentication_Method_in_Distributed_Network_Environment](https://github.com/uni2u/difs/blob/master/reference/The_Shortest_Authentication_Path_for_Performance_Improvement_of_MHT_Contents_Authentication_Method_in_Distributed_Network_Environment.pdf)
-
-### DIFS 동적 구성
-
-- DIFS 구성 노드의 동적 구성
-  - **DHT** 활용
-
-## 일정
-
-- 크게 상반기 (7월) 및 하반기 (11월) 구성
-  - 상반기: '기본기능' 및 'blake 기반 one signature hash-chain' 파트
-  - 하반기: 'Layered Hash Table' 및 'DIFS 동적 구성' 파트
-- 논문 및 OpenSource 일정과 함께 조율 필요
-  - 상반기의 일정은 보다 빠르게 진행되어야 할 필요가 있음
-  - [acm-icn 2020](http://conferences.sigcomm.org/acm-icn/2020/) 일정이 다음과 같음
-    - May 15, 2020: Paper Registration Deadline
-    - May 22, 2020: Paper Submission Deadline
-    - Aug 1, 2020: Acceptance Notification
-    - Sep 1, 2020: Camera Ready
-    - Sep 28: Conference
-- 'COVID19' 로 인한 일정 조율 가능성 있음
-
-#### 우선순위
-
-1. '기본기능'
-2. 'Signature (blake2/3, hash-chain)'
-3. 'Layered Hash Tree'
-4. 'DIFS 동적 구성'
-
-#### 상세 개발 일정
-
-- 상세 개발 관련 일정 조율 예정
-
-#### 요청 사항
-
-- DIFS 2019 code walk-through
-  - repo-ng 포함
+## Schedule
