--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -55,23 +55,23 @@ index d7c0e709..e836ab44 100644
 
 ### 기본 기능
 
-- 배경
-  - NDN 은 기본적으로 모든 데이터에 대한 signature 를 요구하고 있으며 이는 매우 비싼 자원을 소모하는 것에 공감하고 있음
-  - Signature 를 줄이는 방안이 몇가지 소개되고 있으나 embedded manifest 방식을 제외하면 별 다른 움직임이 없음
-  - DIFS 도 데이터가 저장되는 저장소이기에 signature 에 대한 이슈를 동일하게 가지고 있음
-    - 2019 년에 'DigestSha256' 을 사용하는 방법으로 진행이 되었음
-  - 새로운 signature type 정의 `blake2b` 또는 `blake3` 활용
-  - `blake` 기반의 `hash chain` 구조
+- insert
+- get
+- delete
 
 #### Hash Chain (Integrity Verifying, Originality)
 
 - Hash Chain
   - DIFS 에서 제공하는 Signature 방안으로 'One Signature' 를 통한 데이터 무결성 지원 방안
   - 동작 절차
-    - 최초 데이터 패킷은 signature 를 포함하며 digest 로 바로 뒤 데이터의 hash 를 가지고 있음
-    - 두번째 데이터 패킷은 digest 로 바로 뒤 데이터의 hash 를 가지고 있음
-    - 두번째 데이터를 받으면 첫번째 데이터를 받으면서 함께 받은 digest (두번째 데이터의 hash) 와 실제 받은 데이터의 hash 를 비교
-    - ...
+    - 마지막 패킷 m(메시지): m<sub>end</sub> = name<sub>end</sub> + data<sub>end</sub>
+    - 마지막 패킷 k(키): k<sub>end</sub> = Hash(m<sub>end</sub> || null_hash)
+    - 첫번째 패킷 k(키): k<sub>1</sub> = Hash(m<sub>1</sub> || k<sub>end</sub>)
+    - 첫번째 패킷 RSA_SIGN: RSA_SIGN(Primary_Key || k<sub>1</sub>)
+    - 두번째 패킷 k(키): k<sub>2</sub> = Hash(m<sub>2</sub> || k<sub>1</sub>)
+    - 세번째 패킷 k(키): k<sub>3</sub> = Hash(m<sub>3</sub> || k<sub>2</sub>)
+  - Segments
+    - S(세그먼트): S = Encap(Primary_Key<sub>cp</sub>, Hash(k<sub>1</sub>) || k<sub>end</sub>
 
 ```
 +-->>[Signature]-----------+   +-->[hash]----------------+   +-->[hash]----------------+     +--------------------+
