--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -63,15 +63,24 @@ index d7c0e709..e836ab44 100644
 
 - Hash Chain
   - DIFS 에서 제공하는 Signature 방안으로 'One Signature' 를 통한 데이터 무결성 지원 방안
-  - 동작 절차
+  - Generation 동작 절차
     - 마지막 패킷 m(메시지): m<sub>end</sub> = name<sub>end</sub> + data<sub>end</sub>
     - 마지막 패킷 k(키): k<sub>end</sub> = Hash(m<sub>end</sub> || null_hash)
     - 첫번째 패킷 k(키): k<sub>1</sub> = Hash(m<sub>1</sub> || k<sub>end</sub>)
-    - 첫번째 패킷 RSA_SIGN: RSA_SIGN(Primary_Key || k<sub>1</sub>)
+    - 첫번째 패킷 RSA_SIGN: RSA_SIGN(Primary_Key<sub>cp</sub> || k<sub>1</sub>)
     - 두번째 패킷 k(키): k<sub>2</sub> = Hash(m<sub>2</sub> || k<sub>1</sub>)
     - 세번째 패킷 k(키): k<sub>3</sub> = Hash(m<sub>3</sub> || k<sub>2</sub>)
-  - Segments
     - S(세그먼트): S = Encap(Primary_Key<sub>cp</sub>, Hash(k<sub>1</sub>) || k<sub>end</sub>
+  - Verification 동작 절차
+    - 첫번째 패킷 받음: k<sub>end</sub> = Decrypt(Public_key<sub>cp</sub>, S)
+    - 받은 패킷: k<sub>1</sub> = Hash(name<sub>1</sub> || data<sub>1</sub> || k<sub>end</sub>)
+    - 첫번째 패킷 비교: k<sub>1</sub> == k<sub>1</sub>'
+    - 두번째 패킷: k<sub>2</sub> = Hash(name<sub>2</sub> || data<sub>2</sub> || k<sub>1</sub>)
+    - 두번째 패킷 비교: k<sub>2</sub> == k<sub>2</sub>'
+    - 세번째 패킷: k<sub>3</sub> = Hash(name<sub>3</sub> || data<sub>3</sub> || k<sub>2</sub>)
+    - 세번째 패킷 비교: k<sub>3</sub> == k<sub>3</sub>'
+    - 마지막 패킷: k<sub>end</sub> = Hash(name<sub>end</sub> || data<sub>end</sub> || null_hash)
+    - 마지막 패킷 비교: k<sub>end</sub> == k<sub>end</sub>'
 
 ```
 +-->>[Signature]-----------+   +-->[hash]----------------+   +-->[hash]----------------+     +--------------------+
