--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -105,10 +105,14 @@ index d7c0e709..e836ab44 100644
     - 성능 테스트 결과 `blake2` 가 'sha256' 에 비해 우수함 확인
       - [hash-compare-test](https://github.com/uni2u/difs/blob/master/reference/hash-compare-test%20(7).pdf)
       - [hash-compare-test-rsa](https://github.com/uni2u/difs/blob/master/reference/hash-compare-test-rsa%20(1).pdf)
+  - Blake3 적용 관련
+    - [Blake3 github](https://github.com/BLAKE3-team/BLAKE3)
+      - [Blake3 C base](https://github.com/BLAKE3-team/BLAKE3/tree/master/c)
   - 적용 방안
     - [NDN Packet Format Signature Type](https://named-data.net/doc/NDN-packet-spec/current/signature.html) 추가
-    - 'SignatureBlakeWithRsa' 또는 'DigestBlake' 등
-    - 현재 제공되는 NDN Signature Type 은 아래와 같음
+    - 우선 순위는 없으나 다음과 같이 구분할 수 있음
+      - `SignatureSha256WithHashChain` 추가
+      - `DigestBlake3`, `SignatureBlake3WithHashChain` 추가
 
 | Value | Reference | Description |
 |:---:|:---|:---|
