--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -6,7 +6,7 @@
 
 # DIFS 2020
 
-- [관련 파일](https://github.com/uni2u/difs/blob/master/reference/difs_2020.pdf) 참조
+- [관련 파일](https://github.com/uni2u/difs/blob/master/reference/20200701-hash_chain.pdf) 참조
 
 ## 주요내용
 
@@ -110,7 +110,7 @@ index d7c0e709..e836ab44 100644
       - [Blake3 C base](https://github.com/BLAKE3-team/BLAKE3/tree/master/c)
   - 적용 방안
     - [NDN Packet Format Signature Type](https://named-data.net/doc/NDN-packet-spec/current/signature.html) 추가
-    - 우선 순위는 없으나 다음과 같이 구분할 수 있음
+    - 개발 우선 순위는 없으나 다음과 같이 구분할 수 있음
       - `SignatureSha256WithHashChain` 추가
       - `DigestBlake3`, `SignatureBlake3WithHashChain` 추가
 
@@ -127,3 +127,7 @@ index d7c0e709..e836ab44 100644
 | >200 | `Blake Type 추가` | unassigned |
 
 ## Schedule
+
+- NDN packet format 0.3 적용과 기본 기능이 함께 진행중이며 이슈 사항의 내용만 확인되면 기본 구성은 한 것으로 보임
+- NDN Hash Chain 이 생각보다 시간이 필요할 수 있음
+  - ndn-cxx 에 추가
