--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -11,7 +11,12 @@
 ## 주요내용
 
 - ndn packet format 0.3 포팅완료
-  - 관련 review: ISSUE
+  - 관련 review: [ISSUE](https://github.com/uni2u/difs/issues)
+    - [중복 data_name insert](https://github.com/uni2u/difs/issues/8)
+    - [없는 data_name get](https://github.com/uni2u/difs/issues/9)
+    - [없는 data_name delete](https://github.com/uni2u/difs/issues/10)
+    - ['/example/data/0' data_name get](https://github.com/uni2u/difs/issues/11)
+    - [packet format 0.3 적용 difs build](https://github.com/uni2u/difs/issues/12)
 - Hash Chain 적용
   - Digest-blake3
   - Signature-hash-chain-with-blake3
