--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -12,10 +12,6 @@
 
 - ndn packet format 0.3 포팅완료
   - 관련 review: [ISSUE](https://github.com/uni2u/difs/issues)
-    - [중복 data_name insert](https://github.com/uni2u/difs/issues/8)
-    - [없는 data_name get](https://github.com/uni2u/difs/issues/9)
-    - [없는 data_name delete](https://github.com/uni2u/difs/issues/10)
-    - ['/example/data/0' data_name get](https://github.com/uni2u/difs/issues/11)
     - [packet format 0.3 적용 difs build](https://github.com/uni2u/difs/issues/12)
 - Hash Chain 적용
   - Digest-blake3
@@ -60,9 +56,16 @@ index d7c0e709..e836ab44 100644
 
 ### 기본 기능
 
-- insert
-- get
-- delete
+- NDN packet format 0.3 포팅과 병행하여 진행중
+- 내부 확인을 통하여 아래 이슈 생성
+  - insert
+    - [중복 data_name insert](https://github.com/uni2u/difs/issues/8)
+  - get
+    - [없는 data_name get](https://github.com/uni2u/difs/issues/9)
+    - ['/example/data/0' data_name get](https://github.com/uni2u/difs/issues/11)
+  - delete
+    - [없는 data_name delete](https://github.com/uni2u/difs/issues/10)
+- 생성된 이슈에 대하여 일정 조율 
 
 #### Hash Chain (Integrity Verifying, Originality)
 
