--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -128,9 +128,9 @@ index d7c0e709..e836ab44 100644
 | 1 | [SignatureSha256WithRsa](https://named-data.net/doc/NDN-packet-spec/current/signature.html#signaturesha256withrsa) | Integrity and provenance protection using RSA signature over a SHA-256 digest |
 | 3 | [SignatureSha256WithEcdsa](https://named-data.net/doc/NDN-packet-spec/current/signature.html#signaturesha256withecdsa) | Integrity and provenance protection using an ECDSA signature over a SHA-256 digest |
 | 4 | [SignatureHmacWithSha256](https://named-data.net/doc/NDN-packet-spec/current/signature.html#signaturehmacwithsha256) | Integrity and provenance protection using SHA256 hash-based message authentication codes |
-| 5 | `SignatureSha256WithHashChain` | Integrity and provenance protection using Hash Chain signature over a SHA-256 digest |
-| 6 | `DigestBlake3` | Integrity protection using Blake3 digest |
-| 7 | `SignatureBlake3WithHashChain` | Integrity and provenance protection using Hash Chain signature over a Blake3 digest |
+| 5 `추가` | `SignatureSha256WithHashChain` | Integrity and provenance protection using Hash Chain signature over a SHA-256 digest |
+| 6 `추가` | `DigestBlake3` | Integrity protection using Blake3 digest |
+| 7 `추가` | `SignatureBlake3WithHashChain` | Integrity and provenance protection using Hash Chain signature over a Blake3 digest |
 | 2,5-200 | | reserved for future assignments |
 | >200 | `Blake Type 추가` | unassigned |
 
