--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -82,25 +82,25 @@ index d7c0e709..e836ab44 100644
   - Verification 동작 절차
     - 첫번째 패킷 받음: k<sub>end</sub> = Decrypt(Public_key<sub>cp</sub>, S)
     - 받은 패킷: k<sub>1</sub> = Hash(name<sub>1</sub> || data<sub>1</sub> || k<sub>end</sub>)
-    - 첫번째 패킷 비교: k<sub>1</sub> == k<sub>1</sub>'
+    - 첫번째 패킷 비교: k<sub>1</sub> == k'<sub>1</sub>
     - 두번째 패킷: k<sub>2</sub> = Hash(name<sub>2</sub> || data<sub>2</sub> || k<sub>1</sub>)
-    - 두번째 패킷 비교: k<sub>2</sub> == k<sub>2</sub>'
+    - 두번째 패킷 비교: k<sub>2</sub> == k'<sub>2</sub>
     - 세번째 패킷: k<sub>3</sub> = Hash(name<sub>3</sub> || data<sub>3</sub> || k<sub>2</sub>)
-    - 세번째 패킷 비교: k<sub>3</sub> == k<sub>3</sub>'
+    - 세번째 패킷 비교: k<sub>3</sub> == k'<sub>3</sub>
     - 마지막 패킷: k<sub>end</sub> = Hash(name<sub>end</sub> || data<sub>end</sub> || null_hash)
-    - 마지막 패킷 비교: k<sub>end</sub> == k<sub>end</sub>'
+    - 마지막 패킷 비교: k<sub>end</sub> == k'<sub>end</sub>
 
 ```
-+-->>[Signature]-----------+   +-->[hash]----------------+   +-->[hash]----------------+     +--------------------+
-|  |                       |   |  |                      |   |  |                      |     |                    |
-|  | +-------------------+ |   |  | +------------------+ |   |  | +------------------+ |     | +----------------+ |
-|  | |hash(#01||#end_key)| |---+  | |hash(#02||#01_key)| |---+  | |hash(#03||#02_key)| |     | |   null hash    | ---+
-|  | +-------------------+ |      | +------------------+ |      | +------------------+ |     | +----------------+ |  |
-|  | |    data #01       | |      | |    data #02      | |      | |    data #03      | | ... | |    data #END   | |  |
-|  | +-------------------+ |      | +------------------+ |      | +------------------+ |     | +----------------+ |  |
-|  +-----------------------+      +----------------------+      +----------------------+     +--------------------+  |
-|                                                                                                                    |
-+------------------------------------------------------------------------------------------------(#end_key)----------+
++-->>[Signature]-----------+  +-->[hash]----------------+  +-->[hash]----------------+     +--------------------+
+|  |                       |  |  |                      |  |  |                      |     |                    |
+|  | +-------------------+ |  |  | +------------------+ |  |  | +------------------+ |     | +----------------+ |
+|  | |hash(#01||#end_key)| ---+  | |hash(#02||#01_key)| ---+  | |hash(#03||#02_key)| |     | |   null hash    | ---+
+|  | +-------------------+ |     | +------------------+ |     | +------------------+ |     | +----------------+ |  |
+|  | |    data #01       | |     | |    data #02      | |     | |    data #03      | | ... | |    data #END   | |  |
+|  | +-------------------+ |     | +------------------+ |     | +------------------+ |     | +----------------+ |  |
+|  +-----------------------+     +----------------------+     +----------------------+     +--------------------+  |
+|                                                                                                                  |
++----------------------------------------------------------------------------------------------(#end_key)----------+
 ```
 
 #### Signature Type (blake2b/blake3)
