--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -80,7 +80,7 @@ index d7c0e709..e836ab44 100644
     - 세번째 패킷 k(키): k<sub>3</sub> = Hash(m<sub>3</sub> || k<sub>2</sub>)
     - S(세그먼트): S = Encap(Primary_Key<sub>cp</sub>, Hash(k<sub>1</sub>) || k<sub>end</sub>
   - Verification 동작 절차
-    - 첫번째 패킷 받음: k<sub>end</sub> = Decrypt(Public_key<sub>cp</sub>, S)
+    - 첫번째 패킷 받음: k<sub>end</sub> = Decrypt(Public_Key<sub>cp</sub>, S)
     - 받은 패킷: k<sub>1</sub> = Hash(name<sub>1</sub> || data<sub>1</sub> || k<sub>end</sub>)
     - 첫번째 패킷 비교: k<sub>1</sub> == k'<sub>1</sub>
     - 두번째 패킷: k<sub>2</sub> = Hash(name<sub>2</sub> || data<sub>2</sub> || k<sub>1</sub>)
