--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -132,7 +132,7 @@ index d7c0e709..e836ab44 100644
 | 6 `추가` | `DigestBlake3` | Integrity protection using Blake3 digest |
 | 7 `추가` | `SignatureBlake3WithHashChain` | Integrity and provenance protection using Hash Chain signature over a Blake3 digest |
 | 2,5-200 | | reserved for future assignments |
-| >200 | `Blake Type 추가` | unassigned |
+| >200 | `Blake Type 추가` | value 5, 6, 7 |
 
 ## Schedule
 
