--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -71,6 +71,8 @@ index d7c0e709..e836ab44 100644
 
 - Hash Chain
   - DIFS 에서 제공하는 Signature 방안으로 'One Signature' 를 통한 데이터 무결성 지원 방안
+  - __Batch-Hash__ chain 이라고 naming 함
+    - Backward Chain 방식
   - Generation 동작 절차
     - 마지막 패킷 m(메시지): m<sub>end</sub> = name<sub>end</sub> + data<sub>end</sub>
     - 마지막 패킷 k(키): k<sub>end</sub> = Hash(m<sub>end</sub> || null_hash)
