--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -77,10 +77,10 @@ index d7c0e709..e836ab44 100644
     - 마지막 패킷 m(메시지): m<sub>end</sub> = name<sub>end</sub> + data<sub>end</sub>
     - 마지막 패킷 k(키): k<sub>end</sub> = Hash(m<sub>end</sub> || null_hash)
     - 첫번째 패킷 k(키): k<sub>1</sub> = Hash(m<sub>1</sub> || k<sub>end</sub>)
-    - 첫번째 패킷 RSA_SIGN: RSA_SIGN(Primary_Key<sub>cp</sub> || k<sub>1</sub>)
+    - 첫번째 패킷 RSA_SIGN: RSA_SIGN(Private_Key<sub>cp</sub> || k<sub>1</sub>)
     - 두번째 패킷 k(키): k<sub>2</sub> = Hash(m<sub>2</sub> || k<sub>1</sub>)
     - 세번째 패킷 k(키): k<sub>3</sub> = Hash(m<sub>3</sub> || k<sub>2</sub>)
-    - S(세그먼트): S = Encap(Primary_Key<sub>cp</sub>, Hash(k<sub>1</sub>) || k<sub>end</sub>
+    - S(세그먼트): S = Encap(Private_Key<sub>cp</sub>, k<sub>1</sub> || k<sub>end</sub>)
   - Verification 동작 절차
     - 첫번째 패킷 받음: k<sub>end</sub> = Decrypt(Public_Key<sub>cp</sub>, S)
     - 받은 패킷: k<sub>1</sub> = Hash(name<sub>1</sub> || data<sub>1</sub> || k<sub>end</sub>)
