--- a/meet/20200701_mom.md
+++ b/meet/20200701_mom.md
@@ -90,7 +90,7 @@ index d7c0e709..e836ab44 100644
     - 세번째 패킷: k<sub>3</sub> = Hash(name<sub>3</sub> || data<sub>3</sub> || k<sub>2</sub>)
     - 세번째 패킷 비교: k<sub>3</sub> == k'<sub>3</sub>
     - 마지막 패킷: k<sub>end</sub> = Hash(name<sub>end</sub> || data<sub>end</sub> || null_hash)
-    - 마지막 패킷 비교: k<sub>end</sub> == k'<sub>end</sub>
+    - 마지막 패킷 비교: k<sub>end</sub> == k'<sub>end</sub> (여기서 k<sub>end</sub> 는 첫번째 패킷을 통해 가지고 있음)
 
 ```
 +-->>[Signature]-----------+  +-->[hash]----------------+  +-->[hash]----------------+     +--------------------+
