--- a/meet/20200910_mom.md
+++ b/meet/20200910_mom.md
@@ -51,6 +51,7 @@
   - difs 에서 사용할 blake 적용 cxx
   - difs (blake branch) 빌드시 에러 발생
     - 관련 이슈 (https://github.com/uni2u/difs/issues/19)
+    - difs-cxx 및 NFD-0.7.0 버전 체크 필요
 
 #### hash chain
 - difs-cxx
