--- a/meet/20200910_mom.md
+++ b/meet/20200910_mom.md
@@ -54,12 +54,20 @@
     - difs-cxx 및 NFD-0.7.0 버전 체크 필요
 
 #### hash chain
+- 현재 application 레벨의 hash chain 구현 완료
+  - 현 상태는 그대로 두고 ndn-cxx (difs-cxx) 에 포함할 수 있는 방향으로 개발할 것
+  - ndn-cxx 라이브러리화 관련 설계 진행중
+
 - difs-cxx
   - 라이브러리로 사용할 예정
   - difs-cxx lib 에 적용될 수 있도록 함
   - SignatureType 에 SignatureBlake3withHashchain 추가
 
+### Forwarding hint
+- 우선 진행하는 것으로 함
+- 관련하여 repo-ng 에서 https://gerrit.named-data.net/c/repo-ng/+/4807/ 와 같은 움직임이 있었으나 현재 진행되지 않은 것으로 보임
+
 ### 추후 논의
 - hash-chain 상세 설계
+- Forwarding Hint 이슈
 - 시험 절차 및 결과
-- DIFS 관련 차기 아이템 토의
