--- a/meet/20201008_mom.md
+++ b/meet/20201008_mom.md
@@ -1,3 +1,34 @@
+## Minutes Of Meeting
+- 안건: hash chain 설계
+- 참석자
+  - 구름네트웍스: 정아름
+  - 데이터중심네트워크연구실: 신용윤, 박세형
+- 일시: 2020.10.08. (목) 10시 ~ 11시 30분
+- 장소: 온라인
+- [회의 자료 링크](https://github.com/uni2u/difs/blob/master/reference/20201007_Hash-CHain-Implementation-introduction.pdf)
 
+---
 
-https://github.com/uni2u/difs/blob/master/reference/20201007_Hash-CHain-Implementation-introduction.pdf
+## 주요내용
+- Hash Chain 적용
+  - SignatureBlake3WithHashChain
+    - ndn-cxx 라이브러리 적용
+
+### Hash Chain 적용 방안
+- 현재 application 레벨의 hash chain 구현 완료
+- KeyChain 을 상속받은 HashChain 클래스 구성
+  - 1차: 데이터 조각을 Application 에서 구성
+  - 2차: HashChain 관련 모든 기능을 HashChain 클래스에서 지원
+- [회의 자료 링크 참조](https://github.com/uni2u/difs/blob/master/reference/20201007_Hash-CHain-Implementation-introduction.pdf)
+  - 21 페이지 부터
+  - Implementation-A (Generation/Verification)
+  - Implememtation-B (Grneration/Verification)
+- difs-cxx
+  - 라이브러리로 사용할 예정
+  - difs-cxx lib 에 적용될 수 있도록 함
+  - SignatureType 에 SignatureBlake3withHashchain 추가
+
+### 추후 논의
+- hash-chain 상세 설계
+- Forwarding Hint 브렌치 Check
+- 시험 절차 및 결과
