--- a/meet/20201103_mom.md
+++ b/meet/20201103_mom.md
@@ -1,5 +1,5 @@
 ## Minutes Of Meeting
-- 안건: hash chain 현황 체크 및 데모
+- 안건: NDN 기반 데이터 저장소 연동 기능 검토 회의
 - 참석자
   - 구름네트웍스: 정아름
   - 데이터중심네트워크연구실: 신용윤, 박세형
@@ -9,15 +9,16 @@
 ---
 
 ## 주요내용
-- Hash Chain 적용
+- HashChain 적용
   - SignatureBlake3WithHashChain
     - ndn-cxx 라이브러리 적용
+  - HashChain 클래스 구성
+    - KeyChain 상속
 - 데모
   - INC 연동 데모
   - 성능 데모
 
-### Hash Chain 적용 현황
-- 현재 application 레벨의 hash chain 구현 완료
+### HashChain 적용 현황
 - KeyChain 을 상속받은 HashChain 클래스 구성
   - 1차: 데이터 조각을 Application 에서 구성
   - 2차: HashChain 관련 모든 기능을 HashChain 클래스에서 지원
@@ -25,9 +26,10 @@
   - 라이브러리로 사용할 예정
   - difs-cxx lib 에 적용될 수 있도록 함
   - SignatureType 에 SignatureBlake3withHashchain 추가
-- 
 
-### 데모
+#### HashChain 이슈
+
+### 연동 기능 (데모)
 - INC 연동 시나리오
   - ndnputfile 및 ndngetfile 활용
     - ndngetfile <common prefix> <ndn-name> 형태 수정
@@ -41,6 +43,8 @@
     - validation 은 client 에서 진행함
     - client 는 difs-cxx 라이브러리를 포함하고 있음
   - 그래프 또는 숫자형 비교 tool
+
+#### 연동 기능 (데모) 이슈
 
 ### 추후 논의
 - hash-chain 이슈
