--- a/meet/20201103_mom.md
+++ b/meet/20201103_mom.md
@@ -28,6 +28,24 @@
   - SignatureType 에 SignatureBlake3withHashchain 추가
 
 #### HashChain 이슈
+- 패킷 블록 구성
+  - DATA 영역에 next hash 가 포함되도록 함
+    - 첫번째 패킷은 RSA sign
+  - 두번째 패킷부터 sign 영역에 next hash 활용
+    - DATA 영역에 next hash 포함
+    - 동일한 next hash 가 sign 에 활용
+
+```
+# 구성 예)
+
+     +-   +----------+     +----------+     +----------+ 
+     |    |   DATA   |  +->|   DATA   |  +->|   DATA   |
+data |    |----------|  |  |----------|  |  |----------|
+     |    |next hash |--+  |next hash |--+  |  0 hash  |
+     +-   +----------+     +----------+     +----------+
+sign |    |   RSA    |     |next hash |     |  0 hash  |
+     +-   +----------+     +----------+     +----------+
+```
 
 ### 연동 기능 (데모)
 - INC 연동 시나리오
@@ -45,6 +63,7 @@
   - 그래프 또는 숫자형 비교 tool
 
 #### 연동 기능 (데모) 이슈
+
 
 ### 추후 논의
 - hash-chain 이슈
