--- a/meet/20201103_mom.md
+++ b/meet/20201103_mom.md
@@ -63,12 +63,14 @@ sign |    |   RSA    |     |next hash |     |  0 hash  |
   - 그래프 또는 숫자형 비교 tool
 
 #### 연동 기능 (데모) 이슈
+- INC 연동 관련 API 제공
+  - ndnputfile/ndngetfile 수준의 연동 우선 제공
+- 일정
+  - 11월 중 연동 및 성능 관련 내용이 마무리 될 수 있도록 함
+  - 동영상 제작
 
-
-### 추후 논의
-- hash-chain 이슈
-- 데모 구성
-- 용역 결과 (~11월 27일)
+### 용역 완료 검수 논의
+- 용역 결과 (~11월 27일: 온라인 검수를 활용함)
   - 소스코드 CD
     - DIFS 소스 코드 git 내용
     - difs-cxx 소스 코드 git 내용
@@ -76,3 +78,7 @@ sign |    |   RSA    |     |next hash |     |  0 hash  |
   - 보고서
     - 최종결과보고서
     - 사용자메뉴얼
+
+### 차기회의
+- 12월 2주차 오프라인 회의 예정
+  - 오프라인 회의전 까지 온라인을 통한 의견으로 대체함
