--- a/meet/20201103_mom.md
+++ b/meet/20201103_mom.md
@@ -41,9 +41,9 @@
      +-   +----------+     +----------+     +----------+ 
      |    |   DATA   |  +->|   DATA   |  +->|   DATA   |
 data |    |----------|  |  |----------|  |  |----------|
-     |    |next hash |--+  |next hash |--+  |  0 hash  |
+     |    |next hash |--+  |next hash |--+  |  0  hash |
      +-   +----------+     +----------+     +----------+
-sign |    |   RSA    |     |next hash |     |  0 hash  |
+sign |    |   RSA    |     |self hash |     |self hash |
      +-   +----------+     +----------+     +----------+
 ```
 
