--- a/meet/20210106_mom.md
+++ b/meet/20210106_mom.md
@@ -1,1 +1,34 @@
+## Minutes Of Meeting
+- 안건: 2021년 DIFS
+- 참석자
+  - 데이터중심네트워크연구실: 신용윤, 박세형, 곽지영(managed DHT)
+- 일시: 2021.01.06. (수) 13시 30분 ~ 15시 30분
+- 장소: 7-317
 
+---
+
+## 주요내용
+- 기능
+  - managed DHT (동적노드 구성)
+    - dynamic 노드 구성 등
+    - 기능 설계 필요
+      - manifest 저장 노드에 대한 DHT 구성
+      - master node가 존재하며 master를 통해서 노드의 추가/삭제를 지원함
+    - managed DHT 라이브러리화
+  - ForwardingHint
+    - DIFS에서만 적용하는 것으로 함
+  - nosql 활용
+    - redis 적용 (고민)
+  - user tool 라이브러리화
+    - ndnputfile, ndndelfile, ndngetfile 관련 라이브러리화
+- 성능
+  - V-TUNE 적용
+- 연동
+  - MW-NFD 연동 시험
+  - PS 연동 시험
+
+## 일정
+- 10월 모든 일정 종료
+- 특허: 9월
+- 논문: 국제논문
+- KOREN: 검토/적용/시험/검증
