--- a/meet/20210106_mom.md
+++ b/meet/20210106_mom.md
@@ -9,24 +9,42 @@
 
 ## 주요내용
 - 기능
-  - managed DHT (동적노드 구성)
+  - 동적노드 구성
     - dynamic 노드 구성 등
     - 기능 설계 필요
       - manifest 저장 노드에 대한 DHT 구성
       - master node가 존재하며 master를 통해서 노드의 추가/삭제를 지원함
     - managed DHT 라이브러리화
-  - ForwardingHint
+    - 구현 및 연동 시험
+  - ForwardingHint 적용
     - DIFS에서만 적용하는 것으로 함
-  - nosql 활용
-    - redis 적용 (고민)
+    - NDN application 에서만 적용되는 것으로 충분
+  - Key-Value Store 기능 개선
+    - nosql 또는 DBMS 적용 (redis, mongoDB, LevelDB, sqlite3 등)
+    - 현재까지 구성된 file system 구조는 Freezing
+      - 개념상 현재 구성된 DIFS를 기반으로 file system을 nosql (또는 DBMS)로 교체
   - user tool 라이브러리화
     - ndnputfile, ndndelfile, ndngetfile 관련 라이브러리화
+    - 라이브러리화 완료 후 INC를 위한 container에 적용하여 연동 시험
 - 성능
   - V-TUNE 적용
+    - 프로파일링 결과 검토
+    - 코드 최적화 및 안정화
+    - DIFS 2020 최적화
+      - DIFS 2020 결과물 V-TUNE 프로파일링
+        - DIFS core, ndnputfile, ndngetfile, ndndelfile 별 프로파일링
+    - DIFS 2021 최적화
+      - 주요 기능별 개발되면 기능별 V-TUNE 프로파일링 반복 작업
 - 연동
   - MW-NFD 연동 시험
   - PS 연동 시험
+    - pub/sub 서비스에서 DIFS에 저장 요청
+      - DIFS의 insert/get Interest를 pub/sub 에서 활용
 
+- KOREN 망 시험
+  - DIFS 2020 우선 적용      
+  - DIFS 2021 기능 개발 완료 후 신규 버전 적용
+  
 ## 일정
 - 10월 모든 일정 종료
 - 특허: 9월
